# simpy

./: .coverage  CLAUDE.md  Makefile  Makefile.roce  Makefile.tcp  NS3_IMPLEMENTATION_SUMMARY.md  README.md  REVIEW_REPORT.md  __main__.py  analyze_retransmit_issue.py  analyze_simulation_results.py  compare_tcp_retransmit.py  coverage.xml  debug_rto_issue.py  debug_tcp_behavior.py  detailed_implementation_comparison.py  layer_implementation_analysis.md  main.py  pyproject.toml  system_mapping_report.md  test_basic_mptcp.py  test_imports.py  test_minimal_mptcp.py  test_mptcp_comparison.py  test_mptcp_example.py  test_mptcp_retransmission.py  test_network.conf  test_ns3.py  test_ns3_backend.py  test_retransmission_debug.py  test_topo.txt  verify_rto_fix.py
.claude/: settings.local.json
data/: logout.10000pktps.5ms.100rwnd  logout.1000pktps.100ms.150rwnd  logout.1000pktps.100ms.2rwnd  logout.1000pktps.10ms.1rwnd  logout.1000pktps.1ms.10rwnd  logout.1000pktps.3000ms.1rwnd  logout.100pktps.10000ms.10rwnd  logout.100pktps.10000ms.2rwnd  logout.100pktps.100ms.2rwnd  logout.100pktps.2000ms.50rwnd  logout.100pktps.3000ms.10rwnd  logout.100pktps.500ms.10rwnd  logout.100pktps.500ms.20rwnd  logout.10pktps.1000ms.5rwnd  logout.10pktps.100ms.2rwnd  logout.10pktps.10ms.100rwnd  logout.10pktps.10ms.2rwnd  logout.10pktps.500ms.10rwnd  logout.10pktps.50ms.2rwnd  logout.114pktps.351ms.95rwnd  logout.124pktps.17ms.95rwnd  logout.166pktps.150ms.5rwnd  logout.1pktps.1000ms.50rwnd  logout.1pktps.1000ms.5rwnd  logout.1pktps.100ms.2rwnd  logout.1pktps.1ms.100rwnd  logout.1pktps.5000ms.2rwnd  logout.2000pktps.100ms.2rwnd  logout.200pktps.50ms.20rwnd  logout.20pktps.300ms.2rwnd  logout.213pktps.371ms.84rwnd  logout.260pktps.119ms.18rwnd  logout.400pktps.0ms.10rwnd  logout.400pktps.10000000ms.3000rwnd  logout.400pktps.10000ms.100rwnd  logout.400pktps.10000ms.16980rwnd  logout.400pktps.10000ms.254rwnd  logout.400pktps.10000ms.2rwnd  logout.400pktps.10000ms.3000rwnd  logout.400pktps.1000ms.2rwnd  (+21 more)
examples/: busbw.yaml  eventlist_example.py  network.conf  topo_8gpu.txt
examples/01_simple_p2p/: README.md
network_frontend/: __init__.py
network_frontend/analytical/: __init__.py  ana_sim.py  analytical_astra.py  analytical_network.py
network_frontend/htsimpy/: __init__.py  project_structure.md
network_frontend/htsimpy/api/: __init__.py  config_parser.py  htsimpy_network.py
network_frontend/htsimpy/core/: __init__.py  callback_pipe.py  circular_buffer.py  clock.py  config.py  drawable.py  eventlist.py  network.py  network.py.bak  packet.py  pipe.py  route.py  routetable.py  switch.py  tcp_logger.py  trigger.py
network_frontend/htsimpy/datacenter/: README.md  __init__.py  bcube_topology.py  camcube_topology.py  connection_matrix.py  constants.py  dragon_fly_topology.py  (+15 more)
network_frontend/ns3/: AstraSimNetwork.py  __init__.py  astra_sim_network.py  common.py  entry.py
network_frontend/phynet/: __init__.py  phy_sim_ai.py  sim_ai_entry.py  sim_ai_main.py  sim_ai_phy_network.py
output/: detailed_8.csv  test.csv
results/-tp0-pp0-dp0-ga0-ep0-NVL1--8.0G-DP0.0/: EndToEnd.csv
simpy_ns3.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
system/: AstraComputeAPI.py  AstraMemoryAPI.py  AstraNetworkAPI.py  AstraSimDataAPI.py  __init__.py  algorithm.py  api.py  base_stream.py  basic_classes.py  basic_event_handler_data.py  cal_bus_bw.py  callable.py  collective_phase.py  common.py  dataset.py  event_handlers.py  int_data.py  mem_bus.py  mock_nccl.py  mock_nccl_comm.py  mock_nccl_group.py  mock_nccl_log.py  my_packet.py  network_models.py  network_stat.py  param_parser.py  queue_levels.py  scheduling.py  send_packet_event_handler_data.py  shared_bus_stat.py  sim_recv_caller.py  sim_send_caller.py  stream_baseline.py  stream_stat.py  sys.py  sys_function_signatures.md  usage_tracker.py
system/collective/: __init__.py  algorithm.py  all_to_all.py  double_binary_tree_allreduce.py  halving_doubling.py  nccl_tree_flow_model.py  ring.py
system/memory/: __init__.py  simple_memory.py
system/scheduling/: __init__.py  offline_greedy.py
system/topology/: __init__.py  basic_logical_topology.py  binary_tree.py  complex_logical_topology.py  complex_topology.py  double_binary_tree_topology.py  fully_connected_topology.py  general_complex_topology.py  logical_topology.py  node.py  ring_topology.py
workload/: README.md  README_layer_refactor.md  __init__.py  csv_writer.py  layer.py  layer_base.py  layer_communication.py  layer_computation.py  layer_events.py  layer_reporting.py  parallelism_policy.py  workload.py  workload_base.py  workload_iterators.py  workload_parser.py  workload_reporting.py
(+65 files in other folders)
